Add local RuneLite test launcher